# computed_tomography_task

./: CMakeLists.txt  README.md  algebraic_solution.cpp  algebraic_solution.h  algorithms.cpp  algorithms.h  algotools.cpp  algotools.h  cluster.cpp  cluster.h  detector_interface.h  determinant.cpp  determinant.h  dispersion_detector.cpp  dispersion_detector.h  lines.cpp  lines.h  main.cpp  matrix.cpp  matrix.h  matrix_utils.cpp  matrix_utils.h  points.cpp  points.h  test_mathgl_main.cpp  test_mathgl_picture_main.cpp  test_opencv_main.cpp  utils.cpp  utils.h
